# CRISP

./: .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  common.py  flamegraph.pl  flamegraph.py  graph.py  process.py  pyproject.toml  pytest_runner.py  requirements.in  requirements_lock.txt  services.yaml  tb_client.py  test.sh
.github/workflows/: ci.yml  publish.yml
crisp/: BUILD.bazel  LAYERS.md  cct_utils.py  cli.py  common.py  configuration.py  constants.py  dependency_graph.py  exceptions.py  flamegraph.py  get_trace.py  graph.py  main.py  models.py  pipeline.py  process_trace.py  retimer.py  server.py  slack_drag.py  storage.py  tb_client.py  trace_merger.py  yaml_merger.py
crisp/metrics/: BUILD.bazel  aggregators.py  percentile_calculator.py
crisp/output/: BUILD.bazel  csv_generators.py  formatters.py
crisp/proto/: BUILD.bazel  __init__.py  analyzer.proto  analyzer_pb2.py
crisp/service/: BUILD.bazel  __init__.py  cct_parser.py  data_converter.py  file_io.py  streaming.py  trace_processor.py
crisp/shared/: BUILD.bazel  constants.py  models.py  utils.py
crisp/utils/: BUILD.bazel  dict_utils.py  singleton_wrapper.py  span_utils.py
scripts/: ci-local.sh
test_cases/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
test_cases/err_pattern1/: err1.json  err2.json
test_cases/err_pattern2/: err1.json  err2.json
test_cases/err_pattern3/: err1.json
test_cases/err_pattern4/: err1.json
tests/: test_cct_utils.py  test_cli.py  test_common.py  test_configuration.py  test_dependency_graph.py  test_e2e.py  test_e2e_server.py  test_flamegraph.py  test_get_trace.py  test_graph.py  test_merger.py  test_models.py  test_pipeline.py  test_retimer.py  test_retimer_cross_validation.py  test_server.py  test_slack_drag.py  test_storage.py  test_tb_client.py
tests/metrics/: test_aggregators.py  test_percentile_calculator.py
tests/output/: test_csv_generators.py  test_formatters.py
tests/service/: test_cct_parser.py  test_file_io.py  test_streaming.py  test_trace_processor.py
tests/shared/: test_constants.py  test_models.py  test_utils.py
tests/utils/: test_dict_utils.py  test_singleton_wrapper.py  test_span_utils.py
utils/: singleton_wrapper.py
