load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_test(
    name = "pytest",
    size = "small",
    srcs = ["pytest_runner.py"],
    main = "pytest_runner.py",
    data = glob(["tests/**"]) + ["pyproject.toml", "services.yaml"],
    deps = [
        "//crisp:cli",
        "//crisp:common",
        "//crisp:configuration",
        "//crisp:constants",
        "//crisp:graph",
        "//crisp:pkg",
        "//crisp:yaml_merger",
        "//crisp:trace_merger",
        "//crisp:flamegraph",
        "//crisp:cct_utils",
        "//crisp:tb_client",
        "//crisp:storage",
        "//crisp:pipeline",
        "//crisp:get_trace",
        "//crisp:exceptions",
        "//crisp:process_trace",
        "@pypi//boto3",
        "@pypi//botocore",
        "@pypi//pytest",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
    env = {"MPLBACKEND": "Agg"},
    imports = ["."],
)

py_test(
    name = "test_configuration",
    srcs = ["tests/test_configuration.py"],
    deps = ["//crisp:configuration"],
    imports = ["."],
)

py_test(
    name = "test_cli",
    srcs = ["tests/test_cli.py"],
    data = ["services.yaml"],
    deps = ["//crisp:cli"],
    imports = ["."],
)

py_test(
    name = "test_common",
    srcs = ["tests/test_common.py"],
    deps = ["//crisp:common"],
    imports = ["."],
)

py_test(
    name = "test_graph",
    srcs = ["tests/test_graph.py"],
    deps = ["//crisp:graph"],
    imports = ["."],
)

py_test(
    name = "test_merger",
    srcs = ["tests/test_merger.py"],
    deps = [
        "//crisp:yaml_merger",
        "@pypi//pyyaml",
    ],
    imports = ["."],
)

py_test(
    name = "test_flamegraph",
    srcs = ["tests/test_flamegraph.py"],
    deps = [
        "//crisp:flamegraph",
        "//crisp:pkg",
    ],
    imports = ["."],
)

py_test(
    name = "test_cct_utils",
    srcs = ["tests/test_cct_utils.py"],
    deps = [
        "//crisp:cct_utils",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_tb_client",
    srcs = ["tests/test_tb_client.py"],
    deps = [
        "//crisp:tb_client",
        "@pypi//boto3",
        "@pypi//botocore",
    ],
    imports = ["."],
)

py_test(
    name = "test_storage",
    srcs = ["tests/test_storage.py"],
    deps = [
        "//crisp:storage",
        "//crisp:common",
        "//crisp/shared:shared",
        "//crisp/utils:utils",
        "@pypi//boto3",
        "@pypi//botocore",
        "@pypi//python_dateutil",
    ],
    imports = ["."],
)

py_test(
    name = "test_pipeline",
    srcs = ["tests/test_pipeline.py"],
    deps = [
        "//crisp:pipeline",
        "//crisp:common",
    ],
    imports = ["."],
)

py_test(
    name = "test_get_trace",
    srcs = ["tests/test_get_trace.py"],
    deps = [
        "//crisp:get_trace",
        "//crisp:common",
        "//crisp:exceptions",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
    imports = ["."],
)
