load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_test(
    name = "pytest",
    size = "small",
    srcs = ["pytest_runner.py"],
    main = "pytest_runner.py",
    data = glob(["tests/**"]) + ["pyproject.toml", "services.yaml"],
    deps = [
        "//crisp:cli",
        "//crisp:common",
        "//crisp:configuration",
        "//crisp:constants",
        "//crisp:graph",
        "//crisp:pkg",
        "//crisp:yaml_merger",
        "//crisp:trace_merger",
        "//crisp:flamegraph",
        "//crisp:cct_utils",
        "//crisp:tb_client",
        "//crisp:storage",
        "//crisp:pipeline",
        "//crisp:get_trace",
        "//crisp:exceptions",
        "//crisp:process_trace",
        "@pypi//boto3",
        "@pypi//botocore",
        "@pypi//pytest",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
    env = {"MPLBACKEND": "Agg"},
    imports = ["."],
)

py_test(
    name = "test_configuration",
    srcs = ["tests/test_configuration.py"],
    deps = ["//crisp:configuration"],
    imports = ["."],
)

py_test(
    name = "test_cli",
    srcs = ["tests/test_cli.py"],
    data = ["services.yaml"],
    deps = ["//crisp:cli"],
    imports = ["."],
)

py_test(
    name = "test_common",
    srcs = ["tests/test_common.py"],
    deps = ["//crisp:common"],
    imports = ["."],
)

py_test(
    name = "test_graph",
    srcs = ["tests/test_graph.py"],
    deps = ["//crisp:graph"],
    imports = ["."],
)

py_test(
    name = "test_merger",
    srcs = ["tests/test_merger.py"],
    deps = [
        "//crisp:yaml_merger",
        "@pypi//pyyaml",
    ],
    imports = ["."],
)

py_test(
    name = "test_flamegraph",
    srcs = ["tests/test_flamegraph.py"],
    deps = [
        "//crisp:flamegraph",
        "//crisp:pkg",
    ],
    imports = ["."],
)

py_test(
    name = "test_cct_utils",
    srcs = ["tests/test_cct_utils.py"],
    deps = [
        "//crisp:cct_utils",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_tb_client",
    srcs = ["tests/test_tb_client.py"],
    deps = [
        "//crisp:tb_client",
        "@pypi//boto3",
        "@pypi//botocore",
    ],
    imports = ["."],
)

py_test(
    name = "test_storage",
    srcs = ["tests/test_storage.py"],
    deps = [
        "//crisp:storage",
        "//crisp:common",
        "//crisp/shared:shared",
        "//crisp/utils:utils",
        "@pypi//boto3",
        "@pypi//botocore",
        "@pypi//python_dateutil",
    ],
    imports = ["."],
)

py_test(
    name = "test_pipeline",
    srcs = ["tests/test_pipeline.py"],
    deps = [
        "//crisp:pipeline",
        "//crisp:common",
    ],
    imports = ["."],
)

py_test(
    name = "test_get_trace",
    srcs = ["tests/test_get_trace.py"],
    deps = [
        "//crisp:get_trace",
        "//crisp:common",
        "//crisp:exceptions",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/utils tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_dict_utils",
    srcs = ["tests/utils/test_dict_utils.py"],
    main = "tests/utils/test_dict_utils.py",
    deps = ["//crisp/utils:utils"],
    imports = ["."],
)

py_test(
    name = "test_singleton_wrapper",
    srcs = ["tests/utils/test_singleton_wrapper.py"],
    main = "tests/utils/test_singleton_wrapper.py",
    deps = ["//crisp/utils:utils"],
    imports = ["."],
)

py_test(
    name = "test_span_utils",
    srcs = ["tests/utils/test_span_utils.py"],
    main = "tests/utils/test_span_utils.py",
    deps = ["//crisp/utils:utils"],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/shared tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_shared_constants",
    srcs = ["tests/shared/test_constants.py"],
    main = "tests/shared/test_constants.py",
    deps = ["//crisp/shared:shared"],
    imports = ["."],
)

py_test(
    name = "test_shared_models",
    srcs = ["tests/shared/test_models.py"],
    main = "tests/shared/test_models.py",
    deps = [
        "//crisp/shared:shared",
        "//crisp/utils:utils",
    ],
    imports = ["."],
)

py_test(
    name = "test_shared_utils",
    srcs = ["tests/shared/test_utils.py"],
    main = "tests/shared/test_utils.py",
    deps = ["//crisp/shared:shared"],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/metrics tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_aggregators",
    srcs = ["tests/metrics/test_aggregators.py"],
    main = "tests/metrics/test_aggregators.py",
    deps = [
        "//crisp/metrics:metrics",
        "//crisp/shared:shared",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_percentile_calculator",
    srcs = ["tests/metrics/test_percentile_calculator.py"],
    main = "tests/metrics/test_percentile_calculator.py",
    deps = [
        "//crisp/metrics:metrics",
        "@pypi//pandas",
    ],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/output tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_csv_generators",
    srcs = ["tests/output/test_csv_generators.py"],
    main = "tests/output/test_csv_generators.py",
    deps = [
        "//crisp/output:output",
        "//crisp/shared:shared",
        "@pypi//pandas",
    ],
    imports = ["."],
)

py_test(
    name = "test_formatters",
    srcs = ["tests/output/test_formatters.py"],
    main = "tests/output/test_formatters.py",
    deps = [
        "//crisp/output:output",
        "//crisp/shared:shared",
        "@pypi//pandas",
    ],
    imports = ["."],
)
