load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_test(
    name = "pytest",
    size = "small",
    srcs = ["pytest_runner.py"],
    main = "pytest_runner.py",
    data = glob(["tests/**"]) + glob(["test_cases/**"]) + ["pyproject.toml", "services.yaml"],
    deps = [
        "//crisp:cli",
        "//crisp:common",
        "//crisp:configuration",
        "//crisp:constants",
        "//crisp:graph",
        "//crisp:pkg",
        "//crisp:yaml_merger",
        "//crisp:trace_merger",
        "//crisp:flamegraph",
        "//crisp:cct_utils",
        "//crisp:tb_client",
        "//crisp:storage",
        "//crisp:pipeline",
        "//crisp:get_trace",
        "//crisp:exceptions",
        "//crisp:process_trace",
        "//crisp:dependency_graph",
        "//crisp:slack_drag",
        "//crisp:server",
        "//crisp/service:service",
        "@pypi//aiofiles",
        "@pypi//anyio",
        "@pypi//boto3",
        "@pypi//botocore",
        "@pypi//fastapi",
        "@pypi//httpx",
        "@pypi//jinja2",
        "@pypi//matplotlib",
        "@pypi//protobuf",
        "@pypi//psutil",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
    env = {"MPLBACKEND": "Agg"},
    imports = ["."],
)

py_test(
    name = "test_configuration",
    srcs = ["tests/test_configuration.py"],
    deps = ["//crisp:configuration"],
    imports = ["."],
)

py_test(
    name = "test_cli",
    srcs = ["tests/test_cli.py"],
    data = ["services.yaml"],
    deps = ["//crisp:cli"],
    imports = ["."],
)

py_test(
    name = "test_common",
    srcs = ["tests/test_common.py"],
    deps = ["//crisp:common"],
    imports = ["."],
)

py_test(
    name = "test_graph",
    srcs = ["tests/test_graph.py"],
    deps = ["//crisp:graph"],
    imports = ["."],
)

py_test(
    name = "test_merger",
    srcs = ["tests/test_merger.py"],
    deps = [
        "//crisp:yaml_merger",
        "@pypi//pyyaml",
    ],
    imports = ["."],
)

py_test(
    name = "test_flamegraph",
    srcs = ["tests/test_flamegraph.py"],
    deps = [
        "//crisp:flamegraph",
        "//crisp:pkg",
    ],
    imports = ["."],
)

py_test(
    name = "test_cct_utils",
    srcs = ["tests/test_cct_utils.py"],
    deps = [
        "//crisp:cct_utils",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_tb_client",
    srcs = ["tests/test_tb_client.py"],
    deps = [
        "//crisp:tb_client",
        "@pypi//boto3",
        "@pypi//botocore",
    ],
    imports = ["."],
)

py_test(
    name = "test_storage",
    srcs = ["tests/test_storage.py"],
    deps = [
        "//crisp:storage",
        "//crisp:common",
        "//crisp/shared:shared",
        "//crisp/utils:utils",
        "@pypi//boto3",
        "@pypi//botocore",
        "@pypi//python_dateutil",
    ],
    imports = ["."],
)

py_test(
    name = "test_pipeline",
    srcs = ["tests/test_pipeline.py"],
    deps = [
        "//crisp:pipeline",
        "//crisp:process_trace",
        "//crisp:common",
        "@pypi//psutil",
    ],
    imports = ["."],
)

py_test(
    name = "test_dependency_graph",
    srcs = ["tests/test_dependency_graph.py"],
    deps = [
        "//crisp:dependency_graph",
        "//crisp:graph",
        "//crisp:configuration",
        "//crisp/shared:shared",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_slack_drag",
    size = "small",
    srcs = ["tests/test_slack_drag.py"],
    data = glob(["test_cases/**"]),
    deps = [
        "//crisp:slack_drag",
        "//crisp:graph",
        "//crisp:dependency_graph",
        "//crisp/shared:shared",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_get_trace",
    srcs = ["tests/test_get_trace.py"],
    deps = [
        "//crisp:get_trace",
        "//crisp:common",
        "//crisp:exceptions",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
    imports = ["."],
)

py_test(
    name = "test_models",
    srcs = ["tests/test_models.py"],
    deps = [
        "//crisp:pkg",
        "//crisp/shared:shared",
    ],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/utils tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_dict_utils",
    srcs = ["tests/utils/test_dict_utils.py"],
    main = "tests/utils/test_dict_utils.py",
    deps = ["//crisp/utils:utils"],
    imports = ["."],
)

py_test(
    name = "test_singleton_wrapper",
    srcs = ["tests/utils/test_singleton_wrapper.py"],
    main = "tests/utils/test_singleton_wrapper.py",
    deps = ["//crisp/utils:utils"],
    imports = ["."],
)

py_test(
    name = "test_span_utils",
    srcs = ["tests/utils/test_span_utils.py"],
    main = "tests/utils/test_span_utils.py",
    deps = ["//crisp/utils:utils"],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/shared tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_shared_constants",
    srcs = ["tests/shared/test_constants.py"],
    main = "tests/shared/test_constants.py",
    deps = ["//crisp/shared:shared"],
    imports = ["."],
)

py_test(
    name = "test_shared_models",
    srcs = ["tests/shared/test_models.py"],
    main = "tests/shared/test_models.py",
    deps = [
        "//crisp/shared:shared",
        "//crisp/utils:utils",
    ],
    imports = ["."],
)

py_test(
    name = "test_shared_utils",
    srcs = ["tests/shared/test_utils.py"],
    main = "tests/shared/test_utils.py",
    deps = ["//crisp/shared:shared"],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/metrics tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_aggregators",
    srcs = ["tests/metrics/test_aggregators.py"],
    main = "tests/metrics/test_aggregators.py",
    deps = [
        "//crisp/metrics:metrics",
        "//crisp/shared:shared",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_percentile_calculator",
    srcs = ["tests/metrics/test_percentile_calculator.py"],
    main = "tests/metrics/test_percentile_calculator.py",
    deps = [
        "//crisp/metrics:metrics",
        "@pypi//pandas",
    ],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# crisp/output tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_csv_generators",
    srcs = ["tests/output/test_csv_generators.py"],
    main = "tests/output/test_csv_generators.py",
    deps = [
        "//crisp/output:output",
        "//crisp/shared:shared",
        "@pypi//pandas",
    ],
    imports = ["."],
)

# ---------------------------------------------------------------------------
# End-to-end integration tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_e2e",
    size = "medium",
    srcs = ["tests/test_e2e.py"],
    data = glob(["test_cases/**"]),
    deps = [
        "//crisp:flamegraph",
        "//crisp:process_trace",
        "//crisp/proto:proto",
        "@pypi//jinja2",
        "@pypi//matplotlib",
        "@pypi//numpy",
        "@pypi//pandas",
        "@pypi//pyyaml",
        "@pypi//protobuf",
    ],
    imports = ["."],
    env = {"MPLBACKEND": "Agg"},
)

# ---------------------------------------------------------------------------
# HTTP service tests
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# HTTP service tests
# ---------------------------------------------------------------------------

py_test(
    name = "test_service_cct_parser",
    srcs = ["tests/service/test_cct_parser.py"],
    main = "tests/service/test_cct_parser.py",
    deps = [
        "//crisp/proto:proto",
        "//crisp/service:service",
        "@pypi//aiofiles",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
    ],
    imports = ["."],
    env = {"MPLBACKEND": "Agg"},
)

py_test(
    name = "test_service_file_io",
    srcs = ["tests/service/test_file_io.py"],
    main = "tests/service/test_file_io.py",
    deps = [
        "//crisp/service:service",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_service_trace_processor",
    srcs = ["tests/service/test_trace_processor.py"],
    main = "tests/service/test_trace_processor.py",
    deps = [
        "//crisp/proto:proto",
        "//crisp/service:service",
        "@pypi//pytest",
    ],
    imports = ["."],
)

py_test(
    name = "test_service_streaming",
    srcs = ["tests/service/test_streaming.py"],
    main = "tests/service/test_streaming.py",
    deps = [
        "//crisp:process_trace",
        "//crisp/proto:proto",
        "//crisp/service:service",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
    ],
    imports = ["."],
    env = {"MPLBACKEND": "Agg"},
)

py_test(
    name = "test_server",
    srcs = ["tests/test_server.py"],
    deps = [
        "//crisp:server",
        "//crisp/proto:proto",
        "//crisp/service:service",
        "@pypi//fastapi",
        "@pypi//httpx",
        "@pypi//pytest",
    ],
    imports = ["."],
    env = {"MPLBACKEND": "Agg"},
)

py_test(
    name = "test_e2e_server",
    size = "medium",
    srcs = ["tests/test_e2e_server.py"],
    data = glob(["test_cases/**"]),
    deps = [
        "//crisp:server",
        "//crisp/proto:proto",
        "//crisp/service:service",
        "@pypi//anyio",
        "@pypi//fastapi",
        "@pypi//httpx",
        "@pypi//jinja2",
        "@pypi//matplotlib",
        "@pypi//numpy",
        "@pypi//pandas",
        "@pypi//protobuf",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
        "@pypi//pyyaml",
    ],
    imports = ["."],
    env = {"MPLBACKEND": "Agg"},
)

