[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp-trace"
version = "0.1.0.dev0"
description = "Critical-path analysis of distributed traces (Jaeger)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Uber Technologies, Inc." }]
keywords = [
    "tracing",
    "jaeger",
    "critical-path",
    "performance",
    "observability",
    "flamegraph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Runtime dependencies are populated incrementally by subsequent port PRs;
# PR 15 finalizes the full list before any PyPI publish.
dependencies = []

[project.urls]
Homepage = "https://github.com/uber-research/CRISP"
Issues = "https://github.com/uber-research/CRISP/issues"

[tool.setuptools.packages.find]
include = ["crisp*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
