[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp-trace"
version = "0.1.0.dev0"
description = "Critical-path analysis of distributed traces (Jaeger)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Uber Technologies, Inc." }]
keywords = [
    "tracing",
    "jaeger",
    "critical-path",
    "performance",
    "observability",
    "flamegraph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.42",
    "numpy>=2.0",
    "pandas>=2.0",
    "protobuf>=4.0",
    "python-dateutil>=2.8",
    "PyYAML>=6.0",
    "ratelimit>=2.2",
    "requests>=2.28",
    "tenacity>=8.0",
]

[project.optional-dependencies]
server = [
    "aiofiles>=23.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "anyio[trio]>=4.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/uber-research/CRISP"
Issues = "https://github.com/uber-research/CRISP/issues"

[tool.setuptools.packages.find]
include = ["crisp*"]

[project.scripts]
crisp-trace = "crisp.process_trace:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
