load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "pkg",
    srcs = [
        "__init__.py",
        "models.py",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/metrics:metrics",
        "//crisp/output:output",
        "//crisp/shared:shared",
        "//crisp/utils:utils",
    ],
)

py_library(
    name = "configuration",
    srcs = ["configuration.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "constants",
    srcs = ["constants.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "cli",
    srcs = ["cli.py"],
    visibility = ["//visibility:public"],
    deps = [":configuration"],
)

py_library(
    name = "common",
    srcs = ["common.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/shared:shared",
        "@pypi//python_dateutil",
    ],
)

py_library(
    name = "graph",
    srcs = ["graph.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":configuration",
        ":constants",
        ":pkg",
        "//crisp/shared:shared",
        "//crisp/utils:utils",
    ],
)

py_library(
    name = "yaml_merger",
    srcs = ["yaml_merger.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "trace_merger",
    srcs = ["trace_merger.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:graph",
        "//crisp:pkg",
    ],
)

py_library(
    name = "flamegraph",
    srcs = ["flamegraph.py"],
    data = [
        "difffolded.pl",
        "flamegraph.pl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/shared:shared",
    ],
)

py_library(
    name = "cct_utils",
    srcs = ["cct_utils.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/proto:proto",
        "//crisp/shared:shared",
    ],
)

py_library(
    name = "tb_client",
    srcs = ["tb_client.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//boto3",
        "@pypi//botocore",
    ],
)

py_library(
    name = "storage",
    srcs = ["storage.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:common",
        "//crisp:tb_client",
        "//crisp/shared:shared",
    ],
)

py_library(
    name = "pipeline",
    srcs = ["pipeline.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:common",
    ],
)

py_library(
    name = "exceptions",
    srcs = ["exceptions.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "get_trace",
    srcs = ["get_trace.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:common",
        "//crisp:exceptions",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
)

py_library(
    name = "process_trace",
    srcs = ["process_trace.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:cct_utils",
        "//crisp:common",
        "//crisp:constants",
        "//crisp:flamegraph",
        "//crisp:graph",
        "//crisp:pkg",
        "//crisp:storage",
        "//crisp/metrics:metrics",
        "//crisp/output:output",
        "//crisp/shared:shared",
        "@pypi//numpy",
        "@pypi//pandas",
        "@pypi//psutil",
        "@pypi//pyyaml",
    ],
)

py_binary(
    name = "crisp_trace",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:process_trace",
    ],
)

py_library(
    name = "server",
    srcs = ["server.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/proto:proto",
        "//crisp/service:service",
        "@pypi//fastapi",
    ],
)
