load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "pkg",
    srcs = [
        "__init__.py",
        "models.py",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/metrics:metrics",
        "//crisp/output:output",
        "//crisp/shared:shared",
        "//crisp/utils:utils",
    ],
)

py_library(
    name = "configuration",
    srcs = ["configuration.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "constants",
    srcs = ["constants.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "cli",
    srcs = ["cli.py"],
    visibility = ["//visibility:public"],
    deps = [":configuration"],
)

py_library(
    name = "common",
    srcs = ["common.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/shared:shared",
        "@pypi//python_dateutil",
    ],
)

py_library(
    name = "graph",
    srcs = ["graph.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":configuration",
        ":constants",
        ":dependency_graph",
        ":pkg",
        ":retimer",
        ":slack_drag",
        "//crisp/shared:shared",
        "//crisp/utils:utils",
    ],
)

py_library(
    name = "slack_drag",
    srcs = ["slack_drag.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":dependency_graph",
        "//crisp/utils:utils",
    ],
)

py_library(
    name = "dependency_graph",
    srcs = ["dependency_graph.py"],
    visibility = ["//visibility:public"],
    # NOTE: dependency_graph.py only references Graph under `if TYPE_CHECKING:`
    # (with `from __future__ import annotations`, so the annotation is never
    # evaluated at runtime) -- it has no real runtime dependency on `:graph`.
    # A `:graph` dep here would create a Bazel-level cycle now that `slack_drag`
    # (a real dependency of `:graph`) also depends on `:dependency_graph`.
    deps = [],
)

py_library(
    name = "retimer",
    srcs = ["retimer.py"],
    visibility = ["//visibility:public"],
    # NOTE: like dependency_graph.py, retimer.py only references DependencyGraph
    # and Graph/GraphNode under `if TYPE_CHECKING:` (with `from __future__ import
    # annotations`) -- it has no real runtime dependency on `:dependency_graph`
    # or `:graph`. A real dep here would create a Bazel-level cycle now that
    # `:graph` (which `:retimer` is used from) also depends on `:retimer`.
    # `//crisp/shared:shared` (for SpanKind, used by retime_method) is a real,
    # module-level import -- safe because crisp/shared has no dependency on
    # `:retimer` or `:graph`, so it doesn't create the same cycle risk.
    deps = ["//crisp/shared:shared"],
)

py_library(
    name = "yaml_merger",
    srcs = ["yaml_merger.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "trace_merger",
    srcs = ["trace_merger.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:graph",
        "//crisp:pkg",
    ],
)

py_library(
    name = "flamegraph",
    srcs = ["flamegraph.py"],
    data = [
        "difffolded.pl",
        "flamegraph.pl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/shared:shared",
    ],
)

py_library(
    name = "cct_utils",
    srcs = ["cct_utils.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/proto:proto",
        "//crisp/shared:shared",
    ],
)

py_library(
    name = "tb_client",
    srcs = ["tb_client.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//boto3",
        "@pypi//botocore",
    ],
)

py_library(
    name = "storage",
    srcs = ["storage.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:common",
        "//crisp:tb_client",
        "//crisp/shared:shared",
    ],
)

py_library(
    name = "pipeline",
    srcs = ["pipeline.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:common",
    ],
)

py_library(
    name = "exceptions",
    srcs = ["exceptions.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "get_trace",
    srcs = ["get_trace.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:common",
        "//crisp:exceptions",
        "@pypi//requests",
        "@pypi//ratelimit",
        "@pypi//tenacity",
    ],
)

py_library(
    name = "process_trace",
    srcs = ["process_trace.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:cct_utils",
        "//crisp:common",
        "//crisp:constants",
        "//crisp:flamegraph",
        "//crisp:graph",
        "//crisp:pkg",
        "//crisp:slack_drag",
        "//crisp:storage",
        "//crisp/metrics:metrics",
        "//crisp/output:output",
        "//crisp/shared:shared",
        "@pypi//numpy",
        "@pypi//pandas",
        "@pypi//psutil",
        "@pypi//pyyaml",
    ],
)

py_binary(
    name = "crisp_trace",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:process_trace",
    ],
)

py_library(
    name = "server",
    srcs = ["server.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/proto:proto",
        "//crisp/service:service",
        "@pypi//fastapi",
    ],
)
