load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "metrics",
    srcs = [
        "__init__.py",
        "aggregators.py",
        "percentile_calculator.py",
    ],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp/shared:shared",
        "@pypi//pandas",
    ],
)
