load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "service",
    srcs = [
        "__init__.py",
        "cct_parser.py",
        "data_converter.py",
        "file_io.py",
        "streaming.py",
        "trace_processor.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crisp:common",
        "//crisp:process_trace",
        "//crisp/proto:proto",
        "@pypi//aiofiles",
        "@pypi//fastapi",
    ],
)
